fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	adding changes before rebasing conflicts
 -->
 <head>
-	<title>A Great Website</title>
+	<title>A crappy Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; New Text</p>
+		<p>&copy old Text</p>
 	</footer>
 </body>
 </html>
