Adding changes after rebasing

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	adding changes before rebasing conflicts
 -->
 <head>
-	<title>A crappy Website</title>
+	<title>Even more of a crappy Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
