--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy old Text</p>
+		<p>&copy; This is really dumb</p>
 	</footer>
 </body>
 </html>
